# Portfolio

./: Appetizer.csv  LogisticRegression.ipynb  Multidimensional Kmeans Cluster.ipynb  Multidimensional Kmeans Cluster_updated.ipynb  README.md  RandomForest.ipynb  SVM.ipynb  adding_locations.ipynb  final_combined.ipynb  full_analysis.ipynb  gmap_api_key.txt  menu.py  peak_sales.csv  project_1_1.ipynb  project_1_2.ipynb  project_1_3.ipynb  project_1_4.ipynb  project_1_5.ipynb  project_1_6.ipynb  project_2_1.ipynb  project_2_2.ipynb  project_2_3.ipynb  project_2_4.ipynb  project_2_5.ipynb  project_2_6.ipynb  project_2_7.ipynb  project_3_1.ipynb  project_3_2.ipynb  project_3_3.ipynb  project_3_4.ipynb  project_3_5.ipynb  using_bart.ipynb
Bitcoin_Whale_Analysis/: README.md
EDA_Airbnb/: Airbnb Analysis.ipynb  README.md
Insider_Stock_Trading/: README.md
Menu_Builder/: README.md  menu.py
Sales_Prospect_Scoring/: LinkedIn.py  README.md
business_expansion/: README.md
camera/: Dockerfile  camera.yaml
classifiers_sales_opps/: RandomForest.ipynb  SVM.ipynb
customer_segmentation/: README.md  customer_segmentation.ipynb
data/: Cocktail.csv  Dessert.csv  MainCourse.csv  peak_customers.csv  peak_stores.csv
docs/: Project 2 Proposal - Final.docx  Project 2 Proposal.docx
forwarder/: Dockerfile  forwarder.py  forwarder.yaml
img_processor/: Dockerfile  img_processor.py
logger/: Dockerfile
lucy_classifier/: README.md
lucy_classifier_app/: README.md
mlapi/: Dockerfile
movenet_model_file/: run.sh  (+1 more)
sentiment_classifier_kubernetes_azure/mlapi/: pyproject.toml
(+110 files in other folders)
